--- a/workspace.html
+++ b/workspace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com data:;">
 <!--    <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>-->
@@ -15,7 +15,9 @@
                 <button id="back_button" class="menu_button">&#8249;</button>
             </div>
         </div>
-        <div id="blockly-div" style="height: 480px; width: 600px;"></div>
+        <div id="blockly-container">
+            <div id="blockly-div"></div>
+        </div>
     </div>
 </body>
 </html>
