--- a/workspace.html
+++ b/workspace.html
@@ -12,7 +12,7 @@
     <div id="content">
         <div id="menu">
             <div id="back">
-                <button id="back_button" class="menu_button">&#8249;</button>
+                <button id="back-button" class="menu-button">&#8249;</button>
             </div>
         </div>
         <div id="blockly-container">
