--- a/workspace.html
+++ b/workspace.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com data:;">
 <!--    <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>-->
     <meta charset="UTF-8">
+    <script defer src="./toolbox.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="styles.css">
     <title>Hello World!</title>
