--- a/home.html
+++ b/home.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net data:;">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <title>Title</title>
 </head>
 <body>
-  <p>Home screen HTML</p>
-  <button id="bc-button">Go to creator screen</button>
-  <script src="home.js"></script>
+    <div id="content1">
+        <p>Home screen HTML</p>
+        <button id="bc-button" class="btn bg-primary btn-sm">Go to creator screen</button>
+        <script src="home.js"></script>
+        <img src="images/builton_light.png" id="builton_img" class="card-img" alt="Built with Blockly">
+    </div>
 </body>
 </html>
