--- a/workspace.html
+++ b/workspace.html
@@ -11,11 +11,20 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <div id="content">
-        <div id="image-popup">
-
+    <div id="img-content">
+        <div id="image-popup" class="card shadow-lg">
+            <div id="img-menu" class="menu">
+                <div id="upload">
+                    <button id="upload-button" class="menu-button btn btn-outline-primary">Upload</button>
+                </div>
+                <div id="close" class="menu">
+                    <button id="close-button" class="menu-button btn btn-outline-danger">X</button>
+                </div>
+            </div>
         </div>
-        <div id="menu">
+    </div>
+    <div id="content">
+        <div id="menu" class="menu">
             <div id="back">
                 <button id="back-button" class="menu-button btn btn-outline-primary">&#8249;</button>
             </div>
