--- a/workspace.html
+++ b/workspace.html
@@ -7,18 +7,28 @@
     <script defer src="./toolbox.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <title>Hello World!</title>
 </head>
 <body>
     <div id="img-content">
-        <div id="image-popup" class="card shadow-lg">
-            <div id="img-menu" class="menu">
-                <div id="upload">
-                    <button id="upload-button" class="menu-button btn btn-outline-primary">Upload</button>
-                </div>
-                <div id="close" class="menu">
-                    <button id="close-button" class="menu-button btn btn-outline-danger">X</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>...</p>
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <p>...</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -29,7 +39,7 @@
                 <button id="back-button" class="menu-button btn btn-outline-primary">&#8249;</button>
             </div>
             <div id="images">
-                <button id="images-button" class="menu-button btn btn-outline-primary">Images</button>
+                <button type="button" id="images-button" class="menu-button btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Images</button>
             </div>
             <div id="run">
                 <button id="run-button" class="menu-button btn btn-outline-success">Run</button>
