--- a/workspace.html
+++ b/workspace.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net data:;">
-<!--    <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>-->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com data:;">
+    <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>
     <meta charset="UTF-8">
     <script defer src="./toolbox.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
