fixed resizing bug, can now send code through XHR POST requests to localhost:3000

--- a/workspace.html
+++ b/workspace.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com data:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 data:;">
     <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>
     <meta charset="UTF-8">
     <script defer src="./toolbox.js"></script>
