--- a/workspace.html
+++ b/workspace.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 data:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://192.9.249.213:3000 data:;">
     <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>
     <meta charset="UTF-8">
     <script defer src="./toolbox.js"></script>
+    <script defer src="./blocks.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
