--- a/workspace.html
+++ b/workspace.html
@@ -22,11 +22,29 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body" id="image-container" class="image-container">
-                        ...
+
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="images-uplaode-no" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" id="images-upload-yes" class="btn btn-primary">Upload</button>
+                        <button type="button" id="images-upload-no" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" id="images-upload-yes" class="btn btn-primary" data-bs-dismiss="modal">Upload</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="images-preview" tabindex="-1" aria-labelledby="images-modal-label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-l">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="images-preview-label">Images</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="image-preview-container" class="image-container">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="images-preview-no" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>
                     </div>
                 </div>
             </div>
