--- a/workspace.html
+++ b/workspace.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="images-preview" tabindex="-1" aria-labelledby="images-modal-label" aria-hidden="true">
+        <div class="modal fade" id="images-preview" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable modal-l">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -44,7 +44,22 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" id="images-preview-no" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>
+<!--                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>-->
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Confirm </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <button id="upload1" class="dropdown-item" data-bs-dismiss="modal">
+                                        Upload to Class 1
+                                    </button>
+                                </li>
+                                <li>
+                                    <button id="upload2" class="dropdown-item" data-bs-dismiss="modal">
+                                        Upload to Class 2
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
