carousel, load tfjs script

--- a/workspace.html
+++ b/workspace.html
@@ -1,90 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://blockly-demo.appspot.com https://cdn.jsdelivr.net https://unpkg.com http://localhost:3000 http://192.9.249.213:3000 data:;">
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self' 'unsafe-inline'
+          https://blockly-demo.appspot.com https://cdn.jsdelivr.net
+          https://unpkg.com https://ajax.googleapis.com http://localhost:3000
+          http://192.9.249.213:3000 https://tfhub.dev https://storage.googleapis.com
+          data:;">
+
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script defer id="blockly-script" src="https://unpkg.com/blockly/blockly.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <script defer src="./toolbox.js"></script>
     <script defer src="./blocks.js"></script>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <title>Hello World!</title>
 </head>
 <body>
-    <div id="img-content">
-        <div class="modal fade" id="images-modal" tabindex="-1" aria-labelledby="images-modal-label" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="images-modal-label">Images</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body" id="image-container" class="image-container">
-
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="images-upload-no" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" id="images-upload-yes" class="btn btn-primary" data-bs-dismiss="modal">Upload</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="images-preview" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-l">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="images-preview-label">Images</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body" id="image-preview-container" class="image-container">
-
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="images-preview-no" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-<!--                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>-->
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Confirm </button>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <button id="upload1" class="dropdown-item" data-bs-dismiss="modal">
-                                        Upload to Class 1
-                                    </button>
-                                </li>
-                                <li>
-                                    <button id="upload2" class="dropdown-item" data-bs-dismiss="modal">
-                                        Upload to Class 2
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="run-content">
-        <div class="modal fade" id="run-confirm-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="run-confirm-modal-label" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="run-confirm-modal-label">Confirmation</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Do you want to build your code?</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="run-confirm-no" class="btn btn-outline-danger" data-bs-dismiss="modal">No</button>
-                        <button type="button" id="run-confirm-yes" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="content">
+    <div id="content-full">
         <div id="menu" class="menu">
             <div id="back">
                 <button id="back-button" class="menu-button btn btn-outline-primary">&#8249;</button>
@@ -96,13 +32,103 @@
                 <button type="button" id="run-button" class="menu-button btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#run-confirm-modal">Run</button>
             </div>
         </div>
-        <div id="blockly-container">
-            <div id="blockly-div"></div>
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" id="carousel-inner1">
+                <div class="carousel-item active" id="carousel-item1">
+                    <div id="content">
+                        <div id="blockly-container">
+                            <div id="blockly-div"></div>
+                        </div>
+                    </div>
+                    <div id="img-content">
+                        <div class="modal fade" id="images-modal" tabindex="-1" aria-labelledby="images-modal-label" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-scrollable modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="images-modal-label">Images</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" id="image-container" class="image-container">
+
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="images-upload-no" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" id="images-upload-yes" class="btn btn-primary" data-bs-dismiss="modal">Upload</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="images-preview" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-scrollable modal-l">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="images-preview-label">Images</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" id="image-preview-container" class="image-container">
+
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="images-preview-no" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                        <!--                        <button type="button" id="images-preview-yes" class="btn btn-success" data-bs-dismiss="modal">Confirm</button>-->
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> Confirm </button>
+                                            <ul class="dropdown-menu">
+                                                <li>
+                                                    <button id="upload1" class="dropdown-item" data-bs-dismiss="modal">
+                                                        Upload to Class 1
+                                                    </button>
+                                                </li>
+                                                <li>
+                                                    <button id="upload2" class="dropdown-item" data-bs-dismiss="modal">
+                                                        Upload to Class 2
+                                                    </button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="run-content">
+                        <div class="modal fade" id="run-confirm-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="run-confirm-modal-label" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-scrollable modal-sm">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="run-confirm-modal-label">Confirmation</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Do you want to build your code?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="run-confirm-no" class="btn btn-outline-danger" data-bs-dismiss="modal">No</button>
+                                        <button type="button" id="run-confirm-yes" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+                    <div id="build-content">
+                        Building your code!
+                        <p id="status">Starting up...</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+
+
 
     <script>
         require('./preload.js');
     </script>
+<!--    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.js" crossorigin="anonymous"></script>-->
 </body>
 </html>
