can now compile and run model - runs the same every time for now just to test it out

--- a/home.html
+++ b/home.html
@@ -6,56 +6,13 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
     <div id="content1">
         <p>Home screen HTML</p>
         <button id="bc-button" class="btn bg-primary btn-sm">Go to creator screen</button>
         <script src="home.js"></script>
-<!--        <div class="row">-->
-<!--            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">-->
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Boat on Calm Water"-->
-<!--                />-->
-
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Wintry Mountain Landscape"-->
-<!--                />-->
-<!--            </div>-->
-
-<!--            <div class="col-lg-4 mb-4 mb-lg-0">-->
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Mountains in the Clouds"-->
-<!--                />-->
-
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Boat on Calm Water"-->
-<!--                />-->
-<!--            </div>-->
-
-<!--            <div class="col-lg-4 mb-4 mb-lg-0">-->
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Waves at Sea"-->
-<!--                />-->
-
-<!--                <img-->
-<!--                        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"-->
-<!--                        class="w-100 shadow-1-strong rounded mb-4"-->
-<!--                        alt="Yosemite National Park"-->
-<!--                />-->
-<!--            </div>-->
-<!--        </div>-->
         <img src="images/builton_light.png" id="builton_img" class="card-img" alt="Built with Blockly">
     </div>
 </body>
