--- a/creator.html
+++ b/creator.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <title>Title</title>
+    <title>Project Creator</title>
 </head>
 <body>
   <p>HTML for project creator screen</p>
